--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <title>Quran</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 
 <body>
